[package]
name = "rayon-future"
version = "0.1.0"
authors = ["Ethan Pailes <ethanpailes@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.3"
crossbeam = "0.7"

[dev-dependencies]
# for tests
async-std = "1.5"
